objects/RajProduct__c.object
<CustomObject>
    <fields>
        <fullName>RajProductApprovalStatus__c</fullName>
        <label>RajProductApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RajProductCity__c</fullName>
        <label>RajProductCity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
                <value>
                    <fullName>Jaipur</fullName>
                </value>
                <value>
                    <fullName>Banglore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RajProductCost__c</fullName>
        <label>RajProductCost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RajProductName__c</fullName>
        <description>RajProductName</description>
        <label>RajProductName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>RajProduct</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RajProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RajProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>